--- a/MeMe App/Base.lproj/Main.storyboard
+++ b/MeMe App/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MeMe_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,8 +16,53 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UXD-SY-KhU">
+                                <rect key="frame" x="0.0" y="20" width="600" height="536"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="dvQ-VK-spI"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="dvQ-VK-spI"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kG8-li-5Ji">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem title="Pick" id="eAC-gy-0wT">
+                                        <connections>
+                                            <action selector="pickAnImage:" destination="BYZ-38-t0r" id="KhO-R7-Cfa"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UXD-SY-KhU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4Fq-4W-BfR"/>
+                            <constraint firstAttribute="trailing" secondItem="kG8-li-5Ji" secondAttribute="trailing" id="9d7-aL-6yv"/>
+                            <constraint firstItem="kG8-li-5Ji" firstAttribute="top" secondItem="UXD-SY-KhU" secondAttribute="bottom" constant="174" id="FvR-O7-CPh"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="kG8-li-5Ji" secondAttribute="bottom" id="NKf-TF-srK"/>
+                            <constraint firstItem="UXD-SY-KhU" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="R6S-pR-o61"/>
+                            <constraint firstItem="kG8-li-5Ji" firstAttribute="top" secondItem="UXD-SY-KhU" secondAttribute="bottom" id="Uy0-UK-nYK"/>
+                            <constraint firstItem="UXD-SY-KhU" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="fVL-ic-yBx"/>
+                            <constraint firstAttribute="trailing" secondItem="UXD-SY-KhU" secondAttribute="trailing" id="nDW-sI-dJm"/>
+                            <constraint firstItem="UXD-SY-KhU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="208" id="pId-7Q-qBH"/>
+                            <constraint firstItem="kG8-li-5Ji" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="s1g-a0-8Kw"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="R6S-pR-o61"/>
+                                <exclude reference="pId-7Q-qBH"/>
+                                <exclude reference="FvR-O7-CPh"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="imagePickerView" destination="UXD-SY-KhU" id="boA-hv-do2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
